[package]
name = "mumble-web-proxy"
version = "0.1.1"
authors = ["Jonas Herzig <me@johni0702.de>"]
edition = "2018"

[dependencies]
argparse = "0.2.2"
bytes = "1"
byteorder = "1.2"
futures = { version = "0.3", features = ["compat", "io-compat"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mumble-protocol = { path = "vendor/rust-mumble-protocol/", features = ["webrtc-extensions"] }
tokio-tungstenite = "0.13"
http = "0.2"
tungstenite = "0.12"
rtp = { path = "vendor/rtp", features = ["rfc5764-openssl"] }
libnice = { path = "vendor/rust-libnice" }
webrtc-sdp = "0.3"
openssl = "0.10"
